# inmanta-core

./: .adr-dir  .bumpversion.cfg  .ci-all.yml  .ci-arnaud  .ci-docs-test.yml  .ci-integration-tests-pg-versions.yml  .ci-integration-tests-python38.yml  .ci-integration-tests.yml  .ci-performance.yml  .ci-pyp.yml  .ci-rpm  .ci-rpm.yml  .dockerignore  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .mypy-baseline  .pyup.yml  .travis.yml  CHANGELOG.md  Docker.md  Dockerfile  Jenkinsfile  JenkinsfileArnaud  MANIFEST.in  Makefile  NOTICE  PR-8719-REVIEW.md  README.md  REVIEW-R3.md  Readme.md  Vagrantfile  approach.tmp  async.py  build_v2_module.py  changes.tmp  code-review-lark-parser.md  dbdump  (+24 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-fix.md  bug-report.md  enhancement.md
changelogs/: fix-obsolete-test-case.yml  template.yml  update-install-docs.yml
changelogs/10.0.0/: 241-handle-max-clients-limit-in-agents.yml  392-document-config-private-package-repo.yml  5493-get_events_accross_incremental_deploys.yml  5514-doc-warning-multiple-indexes.yml  5774-add-support-archive-doc.yml  5787-drop-equals-injection.yml  6022-use-python-311-fix.yml  6025-add-docs-discoveryhandler.yml  (+94 more)
ci/: Jenkinsfile-python38
debian/: changelog  control  rules
docs/: Makefile  admin.rst  administrators.rst  api.rst  architecture.rst  changelogs.rst  cheatsheet.rst  check_sphinx.py  commands.rst  compatibility.rst  conf.py  config.rst  configuration_requirements.rst  dashboard.rst  dev.rst  developers.rst  docs.rst  documenteer.toml  extensions.rst  extract_openapi_json.py  faq.rst  glossary.rst  guides.rst  index.rst  install.rst  intro.rst  language.rst  logging.rst  mod_dev.rst  model_developers.rst  module_developers.rst  moduleguides.rst  modules.rst  openapi.html  openapi.json  platform_developers.rst  quickstart.rst  reference.rst  required_configuration.json  resource_sets.rst  (+4 more)
integration/: apiPerformanceTester.py  autotest.py  integration.py
misc/: agent.cfg  analyze_speculation.py  docker-server.cfg  epel.repo  extensions.cfg  impera-agent-scl.service  impera-agent.service  impera-server-scl.service  impera-server.service  impera.cfg  impera.lang  impera.vim  inmanta-agent-scl.service  inmanta-agent.service  inmanta-server-scl.service  inmanta-server.service  inmanta-workon-register.sh  inmanta.cfg  inmanta.lang  inmanta.spec  inmanta.vim  logrotation_config  scheduler_log.yml.tmpl  server.cfg  server_log.yml  server_log_container.yml  server_lsm_log.yml  server_lsm_log_container.yml
predictive_test_selection/: MOCKdata_collector.py  README.md  collect_data.py  collect_pts_data.py  collect_test_failure_data.py  data_collector.py  test_data_collector.py
src/: Orderer.py  ParserBench.py  Upverter.py  doprofile.py  imperaLexer.py  inmantaLexer.py  inmantaListener.py  inmantaParser.py  inmantaVisitor.py  orderer.py  plyInmantaLex.py  upverter.py
stubs/: graphviz.pyi  jwt.pyi  texttable.pyi  typing_inspect.pyi
tests/: 2way_protocol.py  CompilationTests.py  agent.py  cache_test.py  check_sphinx.py  compilation_tests.py  compiler.py  conftest.py  data.py  extract_openapi_json.py  io_test.py  miniapp.py  modules.py  modules_git.py  moduletool.py  perftest.py  project.py  protocol.py  reporting.py  server.py  server_agent.py  server_agent.py.rej  server_test.py  test_2way_protocol.py  test_agent.py  test_agentManager.py  test_agent_executor.py  test_agent_manager.py  test_anchors.py  test_app.py  test_app_cli.py  test_cache.py  test_cli.py  test_code_transport.py  test_compilation.py  test_compiler.py  test_compiler_entrypoints.py  test_compiler_errors.py  test_compiler_logging_config.py  test_config.py  (+63 more)
tests/data/modules/elaboratev2module/: setup.cfg
tests/data/modules/elaboratev2module/inmanta_plugins/elaboratev2module/: __init__.py
tests/data/modules/elaboratev2module/model/: _init.cf
tests/data/modules/minimalv2module/: setup.cfg
tests/data/modules_v2/complex_module_dependencies_mod1/: MANIFEST.in  setup.cfg
tests/data/modules_v2/complex_module_dependencies_mod1/model/: _init.cf  submod.cf
tests/data/modules_v2/complex_module_dependencies_mod2/: MANIFEST.in  setup.cfg
tests/data/modules_v2/complex_module_dependencies_mod2/inmanta_plugins/complex_module_dependencies_mod2/: __init__.py
tests/data/modules_v2/complex_module_dependencies_mod2/inmanta_plugins/complex_module_dependencies_mod2/submod/: __init__.py
tests/data/modules_v2/complex_module_dependencies_mod2/model/: _init.cf  submod.cf
tests/data/modules_v2/dependency_but_no_import/: MANIFEST.in  setup.cfg
tests/data/modules_v2/elaboratev2module_extension/: MANIFEST.in  setup.cfg
tests/data/modules_v2/elaboratev2module_extension/inmanta_plugins/elaboratev2module_extension/: __init__.py
tests/data/modules_v2/invalid-resource-def/: MANIFEST.in  setup.cfg
tests/data/modules_v2/invalid-resource-def/inmanta_plugins/invalid_resource_def/: __init__.py
tests/data/modules_v2/main_module_x/: MANIFEST.in  setup.cfg
tests/data/modules_v2/main_module_x/inmanta_plugins/main_module_x/: __init__.py
tests/data/modules_v2/main_module_x/model/: _init.cf
tests/data/modules_v2/many_dependencies/: MANIFEST.in  setup.cfg
tests/data/modules_v2/module-v2-with-version-constraints/: setup.cfg
tests/data/modules_v2/module-v2-with-version-constraints/inmanta_plugins/module_v2_with_version_constraints/: __init__.py
tests/data/modules_v2/module_v2_with_version_constraints/: .editorconfig  .gitignore  MANIFEST.in  README.md  requirements.dev.txt  setup.cfg
tests/data/modules_v2/module_v2_with_version_constraints/model/: _init.cf
tests/data/modules_v2/module_v2_with_version_constraints/tests/: test_basics.py
tests/data/modules_v2/no_matching_dependency/: MANIFEST.in  setup.cfg
tests/data/plugins_project/libs/non_imported_plugin_file/: MANIFEST.in  module.yml  requirements.txt  setup.cfg
tests/data/plugins_project/libs/non_imported_plugin_file/plugins/: __init__.py
tests_common/: MANIFEST.in  README.md  copy_files_from_core.py  setup.cfg  setup.py
(+5993 files in other folders)
