[egg_info]
# Append a zero at the end as a workaround for setuptools bug (pypa/pip#9446)
# see https://github.com/pypa/pip/issues/9446
tag_build = .dev0
tag_date = 0
tag_svn_revision = 0

[flake8]
# H101 Include your name with TODOs as in # TODO(yourname). This makes it easier to find out who the author of the comment was.
# H302 Do not import objects, only modules DEPRICATED
# H404 Multi line docstrings should start without a leading new line.
# H405 multi line docstring summary not separated with an empty line
# H301 Do not import more than one module per line (*)
# H306 Alphabetically order your imports by the full module path.
# H904 Wrap long lines in parentheses instead of a backslash
# E203 whitespace before ':' " on list slice.
# E266 too many leading ‘#’ for block comment
# E252 missing whitespace around parameter equals
# w503 line break occurred before a binary operator
# E402 module level import not at top of file
# E203 whitespaces and the slice operator. black and flake disagree
ignore = H405,H404,H302,H306,H301,H101,H801,E402,W503,E252,E203
max-line-length = 128
exclude = **/.env,.venv,.git,.tox,dist,doc,**egg,src/inmanta/parser/parsetab.py,tests/data/**
copyright-check=True
# C errors are not selected by default, so add them to your selection
select = E,F,W,C,BLK,I
copyright-author=Inmanta

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=128
default_section=FIRSTPARTY
# When tox runs isort it does not label all 1st and 3rd party packages correct, this causes a difference in sorting between
# normal and tox. This list forces these packages
known_first_party=inmanta,inmanta_ext,inmanta_plugins
known_third_party=pytest,psutil,pydantic,pkg_resources,openapi_spec_validator,docstring_parser,cookiecutter,more_itertools,asyncpg,tornado,pyformance,click,pkg_resources,yaml,texttable,dateutil,importlib_metadata,typing_inspect,jwt,ply,jinja2,pkg_resources,colorlog,execnet,click_plugins,cryptography,netifaces,py
skip=tests/data

[mypy]
plugins = pydantic.mypy

check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
follow_imports = silent
no_implicit_optional = True
no_implicit_reexport = True
show_error_codes = True
strict_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[pydantic-mypy]
init_forbid_extra=True
init_typed=True
warn_untyped_fields=True

[options.extras_require]
dataflow_graphic = graphviz;
