[egg_info]
# Append a zero at the end as a workaround for setuptools bug (pypa/pip#9446)
# see https://github.com/pypa/pip/issues/9446
tag_build = .dev0
tag_date = 0
tag_svn_revision = 0

[flake8]
# W503 line break occurred before a binary operator
# E402 module level import not at top of file
# E203 whitespaces and the slice operator. black and flake disagree
# E704 black and flake disagree: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#e701-e704
ignore = E402,W503,E704,E203
max-line-length = 128
exclude = **/.env,.venv,.git,.tox,dist,doc,**egg,src/inmanta/parser/parsetab.py,tests/data/**
copyright-check=True
# C errors are not selected by default, so add them to your selection
select = E,F,W,C,BLK,I
copyright-author=Inmanta

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=128
default_section=FIRSTPARTY
# When tox runs isort it does not label all 1st and 3rd party packages correct, this causes a difference in sorting between
# normal and tox. This list forces these packages
known_first_party=inmanta,inmanta_ext,inmanta_plugins
known_third_party=pytest,psutil,pydantic,pkg_resources,openapi_spec_validator,docstring_parser,cookiecutter,more_itertools,asyncpg,tornado,pyformance,click,pkg_resources,yaml,texttable,dateutil,importlib_metadata,typing_inspect,jwt,ply,jinja2,pkg_resources,colorlog,execnet,click_plugins,cryptography,netifaces,py
skip=tests/data

[options.extras_require]
dataflow_graphic = graphviz;
tracing = logfire
