[metadata]
name = inmanta-module-elaboratev2module
version = 1.2.3
description = A v2 module
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=inmanta_plugins.v2module

[options.package_data]
inmanta_plugins.v2module=files/*, model/*, templates/*, setup.cfg
