[metadata]
name = inmanta-module-minimalv2module
version = 1.2.3
description = A minimal v2 module
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=inmanta_plugins.minimalv2module

[options.package_data]
inmanta_plugins.minimalv2module=model/*, setup.cfg
