# Note: This module doesn't define its dependency on complex-module-dependencies-mod2 in order to test the import-based loading
#       logic.

[metadata]
name = inmanta-module-complex-module-dependencies-mod1
version = 1.1.1
description = A module with an internal circular dependency between _init.cf and submod.cf and an external dependency on complex-module-dependencies-mod2.
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:

[options.package_data]
*=files/*, model/*, templates/*, setup.cfg
