[metadata]
name = inmanta-module-complex-module-dependencies-mod2
version = 2.2.2
description = A module with an internal circular dependency between _init.cf and submod.cf and an external dependency on
              complex-module-dependencies-mod1.
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires =
    inmanta-module-complex-module-dependencies-mod1
