[metadata]
name = inmanta-module-dependency-but-no-import
version = 1.2.3
description = A module that declares a V2 module dependency but does not import it
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires =
    inmanta-module-minimalv2module
