[metadata]
name = inmanta-module-elaboratev2module_extension
version = 1.2.3
description = A v2 module that depends on another v2 module.
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=inmanta_plugins.elaboratev2module_extension
install_requires=
    inmanta-module-elaboratev2module

[options.package_data]
inmanta_plugins.elaboratev2module_extension=model/*, setup.cfg
