[metadata]
name = inmanta-module-elaboratev2module-extension
version = 1.2.3
description = A v2 module that depends on another v2 module.
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires=
    inmanta-module-elaboratev2module
