[metadata]
name = inmanta-module-invalid-resource-def
version = 0.0.1
description = 
author = Inmanta
author_email = code@inmanta.com
license = ASL 2.0
copyright = 2025 Inmanta

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires =
    inmanta-module-std

[options.packages.find]
include = inmanta_plugins*
