[metadata]
name = inmanta-module-main-module-x
version = 1.0
description = A v2 module that reuses plugin code from dependency_module_y
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires =
    inmanta-module-dependency-module-y
