[metadata]
name = inmanta-module-many-dependencies
version = 1.2.1
description = A module with all different types of dependencies (python dependencies + inmanta dependencies)
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires =
  inmanta-module-v2-module==1.2.3
  jinja2~=3.2.1
