[metadata]
name = inmanta-module-module-v2-with-version-constraints
version = 0.0.1
description = 
author = Inmanta
author_email = code@inmanta.com
license = ASL 2.0
copyright = 2022 Inmanta

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires =
    inmanta-module-std

[options.packages.find]
include = inmanta_plugins*

[flake8]
# H101 Include your name with TODOs as in # TODO(yourname). This makes it easier to find out who the author of the comment was.
# H302 Do not import objects, only modules DEPRICATED
# H404 Multi line docstrings should start without a leading new line.
# H405 multi line docstring summary not separated with an empty line
# H301 Do not import more than one module per line (*)
# H306 Alphabetically order your imports by the full module path.
# H904 Wrap long lines in parentheses instead of a backslash
# E203 whitespace before ':' " on list slice.
# E266 too many leading ‘#’ for block comment
# E252 missing whitespace around parameter equals
# w503 line break occurred before a binary operator (black and flake disagree)
# E402 module level import not at top of file
# E203 whitespaces and the slice operator. (black and flake disagree)
ignore = H405,H404,H302,H306,H301,H101,H801,E402,W503,E252,E203

# These inmanta primitive types will throw F821 in annotations
# see: http://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-builtins
builtins=string,number,bool
max-line-length = 128
exclude = **/.env,.venv,.git,.tox,dist,doc,**egg
copyright-check=True
copyright-author=Inmanta
select = E,F,W,C,BLK,I

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
# Black splits up import statements that are too long
# Setting isorts line_length to 88 (blacks default) so they do not collide
line_length=88
known_first_party=inmanta
known_third_party=pytest,pydantic,Jinja2

[black]
line-length=128
target-version = 'py36', 'py37', 'py38'
