[metadata]
name = inmanta-module-module-v2-with-version-constraints
version = 0.0.1
description = A minimal v2 module to test that version constraints are logged on module install
author = Inmanta
author_email = code@inmanta.com
license = ASL 2.0
copyright = 2022 Inmanta

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires = inmanta-module-std
	inmanta-module-elaboratev2module==1.2.3

[options.packages.find]
include = inmanta_plugins*

[flake8]
ignore = H405,H404,H302,H306,H301,H101,H801,E402,W503,E252,E203
builtins = string,number,bool
max-line-length = 128
exclude = **/.env,.venv,.git,.tox,dist,doc,**egg
copyright-check = True
copyright-author = Inmanta
select = E,F,W,C,BLK,I

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_first_party = inmanta
known_third_party = pytest,pydantic,Jinja2

[black]
line-length = 128
target-version = 'py36', 'py37', 'py38'

