[metadata]
name = inmanta-module-no-matching-dependency
version = 1.2.1
description = A module with an dependency that cannot be matched.
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires =
  inmanta-module-v2-module==1234567.1234567.1234567
