[metadata]
name = inmanta-module-non-imported-plugin-file
version = 1.0
description = A v2 module for plugin loading tests
license = Apache 2.0
author = Inmanta <code@inmanta.com>

[options]
zip_safe=False
include_package_data=True
packages=find_namespace:
install_requires =
    inmanta-module-std
    lorem
